Fix desktop scrollbar for restaurants section

--- a/styles/Restaurants.module.css
+++ b/styles/Restaurants.module.css
@@ -46,6 +46,7 @@
   /* Track */
   .restaurants::-webkit-scrollbar-track {
     background: var(--bg-primary);
+    margin-left: 1em;
   }
 
   /* Handle */
@@ -70,4 +71,6 @@
   margin-top: -0.4rem;
   color: var(--text-primary);
   margin-bottom: 0.4rem;
+  margin-left: 0.1rem;
+  opacity: 0.7;
 }
